# imagesofcode

./: README.md  huffman.py  truncation.py
cpptools/: CMakeLists.txt  elfserverrunner.cpp  elftobin.cpp  elftotext.cpp
cpptools/cmake/Modules/: FindCapstone.cmake
cpptools/libs/elfio-3.2/elfio/: elfio_section.hpp
cpptools/libs/elfio-3.2/examples/tutorial/: tutorial.cpp
dataset/: CMakeLists.txt  Toolchain-ARMLinux.cmake
dataset/CRC32/: CMakeLists.txt
dataset/FFT/: CMakeLists.txt
dataset/basicmath/: CMakeLists.txt
dataset/bitcount/: CMakeLists.txt
dataset/dijkstra/: CMakeLists.txt
dataset/qsort/: CMakeLists.txt
dataset/sha/: CMakeLists.txt
libs/darm/: darmgen.py  darmtbl3.py
libs/darm/tests/: expand  tests
libs/darm/utils/: elfdarm
semantic_codec/architecture/: instruction_modifier.py
semantic_codec/compressor/: huffman.py  rle.py
semantic_codec/distributed/: qos_functions.py
tests/: test_instructionModifier.py  test_instructionPartFrequencyChange.py
tests/data/: data.sol
